# cachex

./: .gitignore  README.md  _setup.py  setup.cfg  setup.py
cache/: __init__.py  backends.py  basecache.py  cache.py  connections.py  constants.py  rediscache.py  sentinels.py  serializers.py
cache/backends/: __init__.py  base.py  dummy.py  filesystem.py  local.py  redis.py
src/cache/: __init__.py  cache.py  constants.py  serializers.py
src/cache/backends/: __init__.py  base.py  dummy.py  filesystem.py  local.py  redis.py
src/cache/caches/: __init__.py  base.py  dummy.py  redis.py
tests/: test_backends.py  test_cache.py  test_serializers.py
