[metadata]
name = cache-rykroon
version = attr: cache.__version__
author = Ryan Kroon
author_email = rykroon.tech@gmail.com
description = A python cache with many backends.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rykroon/cache
project_urls =
    Source Code = https://github.com/rykroon/cache/
    Bug Tracker = https://github.com/rykroon/cache/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src


